--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               <!-- Added animation class -->
               <!-- FIXED BROKEN IMG TAG: Re-combined class and onerror attributes -->
               <div class="flex justify-center md:col-span-3 animate-fade-in">
-                  <img src="Images/logo.png" 
+                  <img src="/Images/logo.png" 
                        alt="Orpita Studio Main Logo" 
                        class="h-32 w-full md:h-[10rem] md:w-full object-contain bg-transparent"
                        onerror="this.src='https://placehold.co/600x160/1e1b4b/9333ea?text=LOGO+(60%25+Width)'">
