--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
             <div class="flex-shrink-0 w-32"> <!-- Added fixed width for balance -->
                 <a href="#home">
                     <!-- TODO: Add your studio logo image file here -->
-                    <img src="https://placehold.co/120x40/1e1b4b/9333ea?text=Orpita+LOGO" 
-                         alt="Orpita Studio Logo" 
+                    <img src="./Images/logo.png" 
+                         alt="Logo"
                          class="h-8 md:h-9 w-auto"
                          onerror="this.src='https://placehold.co/120x40/1e1b4b/9333ea?text=LOGO'">
                 </a>
@@ -125,7 +125,7 @@
               <!-- Added animation class -->
               <!-- FIXED BROKEN IMG TAG: Re-combined class and onerror attributes -->
               <div class="flex justify-center md:col-span-3 animate-fade-in">
-                  <img src="/Images/logo.png" 
+                  <img src="./Images/logo.png" 
                        alt="Orpita Studio Main Logo" 
                        class="h-32 w-full md:h-[10rem] md:w-full object-contain bg-transparent"
                        onerror="this.src='https://placehold.co/600x160/1e1b4b/9333ea?text=LOGO+(60%25+Width)'">
