--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="1YWOsibXero-So8ppcXWnIFPYDHhFjQeA-rHDdU_Tfo" />
     <title>Orpita Studio</title>
     
     <!-- Tailwind CSS -->
