--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ Each game reflects what excites us and what we love to create.</p>
                     <!-- Call to Action -->
                     <div class="text-center mt-16 pt-12 border-t border-slate-800 animate-fade-in-up" style="animation-delay: 1.0s;">
                         <a href="#" class="bg-violet-600 text-white font-bold py-3 px-10 rounded-full text-lg hover:bg-violet-700 transition-all duration-300 transform hover:scale-105 shadow-lg animate-pulse-glow">
-                            Learn More About Us
+                            Learn More
                         </a>
                     </div>
                 </div>
