--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ Each game reflects what excites us and what we love to create.</p>
                 
                 <!-- Call to Action -->
                 <div class="text-center p-8 md:p-16 pt-0 md:pt-0"> 
-                    <a href="#" class="bg-violet-600 text-white font-bold py-3 px-10 rounded-full text-lg hover:bg-violet-700 transition-all duration-300 transform hover:scale-105 shadow-lg animate-pulse-glow">
+                    <a href="/pages/games.html" class="bg-violet-600 text-white font-bold py-3 px-10 rounded-full text-lg hover:bg-violet-700 transition-all duration-300 transform hover:scale-105 shadow-lg animate-pulse-glow">
                         Explore All Games
                     </a>
                 </div>
