--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     <meta property="og:title" content="Orpita Game Studio">
     <meta property="og:description" content="Independent game development studio creating narrative-driven interactive experiences.">
-    <meta property="og:image" content="./assets/imgs/LinkCover.png">
+    <meta property="og:image" content="https://orpita-studio.web.app/assets/imgs/LinkCover.png">
     <meta property="og:url" content="https://orpita-studio.web.app/">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
@@ -25,7 +25,7 @@
       "name": "Orpita Studio",
       "url": "https://orpita-studio.web.app/",
       // ده اللوجو اللي بيظهر في جوجل
-      "logo": "https://orpita-studio.web.app/images/NevLogo.png",
+      "logo": "https://orpita-studio.web.app/assets/imgs/SLogoBlack.png",
       "email": "OrpitaStudios@Gmail.com", //
       "description": "Orpita is an indie game studio based in Egypt, creating narrative-driven interactive experiences.", //
 
