--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       "name": "Orpita Studio",
       "url": "https://orpita-studio.web.app/",
       // ده اللوجو اللي بيظهر في جوجل
-      "logo": "https://orpita-studio.web.app/assets/imgs/SLogoBlack.png",
+      "logo": "https://orpita-studio.web.app/assets/imgs/SLogo.png",
       "email": "OrpitaStudios@Gmail.com", //
       "description": "Orpita is an indie game studio based in Egypt, creating narrative-driven interactive experiences.", //
 
