--- a/RMV1/index.html
+++ b/RMV1/index.html
@@ -22,7 +22,7 @@
         <i class="fas fa-bomb"></i>
         <div>
           <h1>Reversed Minesweeper</h1>
-          <span class="subtitle">Level Designer V2.1</span>
+          <span class="subtitle">Level Designer V2.0</span>
         </div>
       </div>
 
@@ -114,12 +114,12 @@
             <div class="condition-row">
               <select class="condition-type-select" style="width: 100%; margin-bottom: 5px;">
                 <option value="" disabled selected>Select Condition Type</option>
-                <option value="getScore">Exact Target Value (Sum)</option>
-                <option value="placeBombAt">Bomb In Specific Cell ID(s)</option>
-                <option value="anyCellValue">Specific Value In Any Cell</option>
-                <option value="cellValues">Specific Value In Specific Cell(s)</option>
-                <option value="emptyCellsCount">Zero-Value Cells Count</option>
-                <option value="setSwitches">Switch State Requirement</option>
+                <option value="getScore">3. Exact Target Value (Sum)</option>
+                <option value="emptyCellsCount">6. Zero-Value Cells Count</option>
+                <option value="anyCellValue">4. Specific Value In Any Cell</option>
+                <option value="placeBombAt">1. Bomb In Specific Cell ID(s)</option>
+                <option value="cellValues">5. Specific Value In Specific Cell(s)</option>
+                <option value="setSwitches">2. Switch State Requirement</option>
               </select>
 
               <div class="condition-value-area" style="flex-grow: 1; display: flex; align-items: center; gap: 5px;">
