--- a/RMV2/index.html
+++ b/RMV2/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Reversed Minesweeper — Level Designer</title>
+  <title>Minesetter — Level Designer</title>
 
   <!-- Fonts & icons -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,8 +21,8 @@
       <div class="logo-area">
         <i class="fas fa-bomb"></i>
         <div>
-          <h1>Reversed Minesweeper</h1>
-          <span class="subtitle">Level Designer V2.1</span>
+          <h1>Minesetter</h1>
+          <span class="subtitle">Level Designer V2.1.1</span>
         </div>
       </div>
 
