--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
             <p class="text-sm text-gray-500">© 2025 Orpita Studio. All Rights Reserved.</p>
         </div>
     </footer>
-
+// مش عيب بردوا لما تبقى فاضي و تقعد تدور على عيوب الناس بدل متصلح من نفسك?
+// روح يحبيبي ربنا يكملك بعقلك و يخليك تبطل تدور ورا عيوب الناس و يرزقك بشغلانة بدل مأنت قاعد فاضي كدا
     </body>
 </html>
