--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
         </div>
     </footer>
 <!-- مش عيب بردوا لما تبقى فاضي و تقعد تدور على عيوب الناس بدل متصلح من نفسك?
- روح يحبيبي ربنا يكملك بعقلك و يخليك تبطل تدور ورا عيوب الناس و يرزقك بشغلانة بدل مأنت قاعد فاضي كدا -->
+ روح يحبيبي ربنا يكملك بعقلك و يخليك تبطل تدور ورا عيوب الناس و يرزقك بشغلانة بدل مأنت قاعد فاضي كدا
+و اه نصيحة مني متقعدش تنبر علشان متصغرش من نفسك
+ -->
     </body>
 </html>
