--- a/RMV2/index.html
+++ b/RMV2/index.html
@@ -32,14 +32,14 @@
                 <i class="fas fa-bomb"></i>
                 <div>
                     <h1>Minesetter</h1>
-                    <span class="subtitle">Level Designer V2.1.3</span>
+                    <span class="subtitle">Level Designer V2.2.1</span>
                 </div>
             </div>
 
             <div class="scrollable-content">
 
                 <div class="panel-group">
-                    <h3><i class="fas fa-ruler-combined"></i> Grid Size</h3>
+                    <h3><i class="fas fa-ruler-combined"></i>Grid Size</h3>
                     <div class="input-row">
                         <div class="input-wrapper">
                             <label>Columns</label>
@@ -147,12 +147,18 @@
             </div>
 
             <div class="sidebar-footer">
-                <div style="margin-bottom: 8px;">
-                    <input type="text" id="exportFileName" placeholder="File Name (e.g. level_01)" value="level_custom" style="margin-bottom:5px;" />
-                    <button id="exportBtn" class="btn-secondary"><i class="fas fa-download"></i> Download JSON</button>
-                </div>
-                <textarea id="exportData" readonly style="display:none"></textarea>
-            </div>
+    <div style="margin-bottom: 8px;">
+        <input type="text" id="exportFileName" placeholder="File Name (e.g. level_01)" value="level_custom" style="margin-bottom:5px;" />
+        
+        <div style="display:flex; gap: 5px; margin-bottom: 5px;">
+            <button id="exportBtn" class="btn-primary" style="flex-grow: 1;"><i class="fas fa-download"></i> Download JSON</button>
+            <button id="copyJsonBtn" class="btn-secondary btn-xs" title="Copy JSON to Clipboard" style="flex-basis: 35px; flex-grow: 0;"><i class="fas fa-copy"></i></button>
+        </div>
+
+        <button id="importBtn" class="btn-secondary full-width"><i class="fas fa-upload"></i> Import JSON</button>
+    </div>
+    <textarea id="exportData" readonly style="display:none"></textarea>
+</div>
         </aside>
 
         <main class="workspace">
