--- a/assets/html/header.html
+++ b/assets/html/header.html
@@ -40,7 +40,7 @@
       
       <a href="#games" class="btn-orpita hidden lg:block">Play Now</a>
       
-<button id="mobile-menu-btn" class="lg:hidden burger-btn">
+<button id="mobile-menu-btn" class="lg:hidden burger-btn" aria-label="Open main menu">
   <span></span>
   <span></span>
   <span></span>
