--- a/en/index.html
+++ b/en/index.html
@@ -158,7 +158,7 @@
                                           
                         
                         <div class="text-center mt-16 pt-12 border-t border-slate-800 opacity-0 animate-fade-in-up" style="animation-delay: 2s;">
-                            <a href="./about" class="bg-violet-600 text-white font-bold py-3 px-10 rounded-full text-lg hover:bg-violet-700 transition-all duration-300 transform hover:scale-105 shadow-lg animate-pulse-glow">Read more</a>
+                            <a href="./about" class="bg-violet-600 text-white font-bold py-3 px-10 rounded-full text-lg hover:bg-violet-700 transition-all duration-300 transform hover:scale-105 shadow-lg animate-pulse-glow aria-label="Read more about One More Day development">Read more</a>
                         </div>
 
                     </div>
