--- a/en/index.html
+++ b/en/index.html
@@ -10,7 +10,14 @@
       gtag('js', new Date());
       gtag('config', 'G-JFJ907933V');
     </script>
-    
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-NTHW4FDT');</script>
+<!-- End Google Tag Manager -->
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orpita Game Studio | Indie game development studio</title>
@@ -55,6 +62,11 @@
 </head>
 
 <body class="flex flex-col min-h-screen">
+
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NTHW4FDT"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
     <div id="tsparticles" class="fixed inset-0 -z-10"></div>
     <div id="header-placeholder"></div>
