--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 const statusEl = document.getElementById('status-text');
                 if(statusEl) statusEl.innerText = "Ready";
 
-                window.location.replace(targetUrl);
+              //  window.location.replace(targetUrl);
             }
 
             // Start the sequence
